# docs/swagger.json
@@ -386,10 +386,7 @@
         },
         "/events/{id}/review": {
             "put": {
-                "description": "Marca un evento como revisado y asigna un estado de gestión",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Marca un evento como revisado y asigna automáticamente un estado de gestión según su tipo",
                 "produces": [
                     "application/json"
                 ],
@@ -404,15 +401,6 @@
                         "name": "id",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "Información de revisión",
-                        "name": "review",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ReviewEventRequest"
-                        }
                     }
                 ],
                 "responses": {
@@ -420,12 +408,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.EventResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Error en los datos de entrada",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
                     "404": {
@@ -580,28 +562,6 @@
                 "TypeAlert",
                 "TypeInfo"
             ]
-        },
-        "models.ManagementStatus": {
-            "type": "string",
-            "enum": [
-                "REQUIRES_MANAGEMENT",
-                "NO_MANAGEMENT"
-            ],
-            "x-enum-varnames": [
-                "ManagementRequired",
-                "ManagementNotRequired"
-            ]
-        },
-        "models.ReviewEventRequest": {
-            "type": "object",
-            "required": [
-                "managementStatus"
-            ],
-            "properties": {
-                "managementStatus": {
-                    "$ref": "#/definitions/models.ManagementStatus"
-                }
-            }
         },
         "models.SuccessResponse": {
             "type": "object",
